--- a/index.html
+++ b/index.html
@@ -47,9 +47,20 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/cle-amato" target="_blank"
+            >Clementina Amato</a
+          >
+          and is
+          <a
+            href="https://github.com/cle-amato/week-5-homework"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a href="https://aesthetic-jalebi-97dd26.netlify.app/" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
